mongodb-express-deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: mongodb-express
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb-express
  template:
    metadata:
      labels:
        app: mongodb-express
    spec:
      volumes:
        - name: cert-volume
          configMap:
            name: sslcert
            defaultMode: 420
      containers:
        - resources: {
            limits: {
              memory: 512Mi,
              cpu: 500m
            }
          }
          name: mongodb-express
          ports:
            - containerPort: 8081
              protocol: TCP
          volumeMounts:
            - name: cert-volume
              mountPath: /cert
          image: 'registry.hub.docker.com/library/mongo-express:latest'
