mongodb-express-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb-express
  labels:
    app: mongodb-express
spec:
  selector:
    app: mongodb-express
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
