mongodb-express-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: mongodb-express
spec:
  to:
    kind: Service
    name: mongodb-express
    weight: 100
  port:
    targetPort: 8081
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
